// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Log should render alert in case of error in query 1`] = `
<strong
  className="typography__AlertText-sc-1yq3b4j-4 eNyvqe"
>
  Tapahtui odottamaton virhe, emmekä juuri nyt pysty näyttämään tietoja.
</strong>
`;

exports[`Log should render with empty log 1`] = `
<div>
  <div
    className="Log__NotificationText-sc-1asjtoe-0 bYqssW"
  >
    <p>
      Tällä sivulla näytetään toimijat, jotka ovat käyttäneet opinto- ja varhaiskasvatustietojasi.
    </p>
    <p>
      Sivu on tyhjä, koska tietojasi ei ole vielä käytetty.**
    </p>
  </div>
  <div
    className="Footnote__Container-sc-x809r1-0 inSMeu"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 iXJLDo"
    >
      Koskee toistaiseksi vain opintotietoja ja varhaiskasvatuksen tietoja, ei hakemustietoja. Lisätietoa hakemusten henkilötietojen käsittelyn perusteista sekä henkilötietojen luovuttamisesta saat 
      <a
        className="typography__Link-sc-1yq3b4j-5 jfkTYR"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          class="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 gFDmmQ"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 kfOwlK"
        >
          tietosuojaselosteesta
        </b>
      </a>
      .
    </div>
  </div>
  <div
    className="Footnote__Container-sc-x809r1-0 inSMeu"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 iXJLDo"
    >
      Tietojen käyttäjät näytetään eri tietorekistereistä seuraavasti:
      <br />
      Opintosuoritukset (KOSKI)
       - 
      14.11.2018 alkaen
      <br />
      Varhaiskasvatuksen tietovaranto (Varda)
       - 
      28.4.2023 alkaen
      <br />
      Kielitutkintorekisteri
       - 
      15.9.2025 alkaen
    </div>
  </div>
</div>
`;

exports[`Log should render with non-empty log 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 hvybnt"
  >
    <div>
      Tietojen käyttäjä
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 hxNnnA"
    >
      Käytetty tietovaranto
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 cFpswF"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 dCVDEV"
      expanded={false}
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 hGmkdd"
      >
        +
      </div>
      Organisaatio 1
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fGrWnX"
      >
        Opintosuoritukset (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 cFpswF"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 dCVDEV"
      expanded={false}
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 hGmkdd"
      >
        +
      </div>
      Test 2
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fGrWnX"
      >
        Varhaiskasvatuksen tietovaranto (Varda)
      </div>
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 cFpswF"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 dCVDEV"
      expanded={false}
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 hGmkdd"
      >
        +
      </div>
      Test 2
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fGrWnX"
      >
        Kielitutkintorekisteri
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 inSMeu"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 iXJLDo"
    >
      Koskee toistaiseksi vain opintotietoja ja varhaiskasvatuksen tietoja, ei hakemustietoja. Lisätietoa hakemusten henkilötietojen käsittelyn perusteista sekä henkilötietojen luovuttamisesta saat 
      <a
        className="typography__Link-sc-1yq3b4j-5 jfkTYR"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          class="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 gFDmmQ"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 kfOwlK"
        >
          tietosuojaselosteesta
        </b>
      </a>
      .
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 inSMeu"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 iXJLDo"
    >
      Tietojen käyttäjät näytetään eri tietorekistereistä seuraavasti:
      <br />
      Opintosuoritukset (KOSKI)
       - 
      14.11.2018 alkaen
      <br />
      Varhaiskasvatuksen tietovaranto (Varda)
       - 
      28.4.2023 alkaen
      <br />
      Kielitutkintorekisteri
       - 
      15.9.2025 alkaen
    </div>
  </div>,
]
`;

exports[`Log should render with non-empty log and language en 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 hvybnt"
  >
    <div>
      User of data
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 hxNnnA"
    >
      Registry that has been used
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 cFpswF"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 dCVDEV"
      expanded={false}
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 hGmkdd"
      >
        +
      </div>
      Organization 1
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fGrWnX"
      >
        Completed studies (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 cFpswF"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 dCVDEV"
      expanded={false}
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 hGmkdd"
      >
        +
      </div>
      Test 2
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fGrWnX"
      >
        The national data warehouse for early childhood education and care Varda
      </div>
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 cFpswF"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 dCVDEV"
      expanded={false}
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 hGmkdd"
      >
        +
      </div>
      Test 2
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fGrWnX"
      >
        Register of Language Proficiency Certificates
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 inSMeu"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 iXJLDo"
    >
      This applies for the time being only to early childhood education and study-related information. Please check the 
      <a
        className="typography__Link-sc-1yq3b4j-5 jfkTYR"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          class="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 gFDmmQ"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 kfOwlK"
        >
          register description
        </b>
      </a>
       if you want to know how the information you have given in joint/separate applications is used.
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 inSMeu"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 iXJLDo"
    >
      Showing organisations that have used your data per data registry:
      <br />
      Completed studies (KOSKI)
       - 
      starting from 14.11.2018
      <br />
      The national data warehouse for early childhood education and care Varda
       - 
      starting from 28.4.2023
      <br />
      Register of Language Proficiency Certificates
       - 
      starting from 15.9.2025
    </div>
  </div>,
]
`;

exports[`Log should render with non-empty log and language sv 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 hvybnt"
  >
    <div>
      Uppgiftsanvändare
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 hxNnnA"
    >
      Använd informationsresurs
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 cFpswF"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 dCVDEV"
      expanded={false}
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 hGmkdd"
      >
        +
      </div>
      Organisation 1
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fGrWnX"
      >
        Studieprestationer (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 cFpswF"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 dCVDEV"
      expanded={false}
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 hGmkdd"
      >
        +
      </div>
      Test 2
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fGrWnX"
      >
        Informationsresursen inom småbarnspedagogik (Varda)
      </div>
    </button>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 cFpswF"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 dCVDEV"
      expanded={false}
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 hGmkdd"
      >
        +
      </div>
      Test 2
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fGrWnX"
      >
        Språkexamensregister
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 inSMeu"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 iXJLDo"
    >
      Gäller tills vidare endast studieuppgifter och uppgifter om småbarnspedagogik, dvs. inte uppgifter som ingår i ansökningar. I 
      <a
        className="typography__Link-sc-1yq3b4j-5 jfkTYR"
        href="https://opintopolku.fi/konfo/sv/sivu/dataskyddsbeskrivningar-och-webbkakor"
        target="_blank"
      >
        <test-file-stub
          class="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 gFDmmQ"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 kfOwlK"
        >
          dataskyddsbeskrivningen
        </b>
      </a>
       får du information om grunderna för användning av personuppgifter i ansökningarna och hur de kan överlåtas.
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 inSMeu"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 iXJLDo"
    >
      Här visas de aktörer som använt dina uppgifter enligt informationsresurs:
      <br />
      Studieprestationer (KOSKI)
       - 
      fr.o.m. 14.11.2018
      <br />
      Informationsresursen inom småbarnspedagogik (Varda)
       - 
      fr.o.m. 28.4.2023
      <br />
      Språkexamensregister
       - 
      fr.o.m. 15.9.2025
    </div>
  </div>,
]
`;

exports[`Log should render with non-empty log and organization with no English name 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 hvybnt"
  >
    <div>
      User of data
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 hxNnnA"
    >
      Registry that has been used
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 cFpswF"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 dCVDEV"
      expanded={false}
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 hGmkdd"
      >
        +
      </div>
      Organisaatio 1
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fGrWnX"
      >
        Completed studies (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 inSMeu"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 iXJLDo"
    >
      This applies for the time being only to early childhood education and study-related information. Please check the 
      <a
        className="typography__Link-sc-1yq3b4j-5 jfkTYR"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          class="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 gFDmmQ"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 kfOwlK"
        >
          register description
        </b>
      </a>
       if you want to know how the information you have given in joint/separate applications is used.
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 inSMeu"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 iXJLDo"
    >
      Showing organisations that have used your data per data registry:
      <br />
      Completed studies (KOSKI)
       - 
      starting from 14.11.2018
      <br />
      The national data warehouse for early childhood education and care Varda
       - 
      starting from 28.4.2023
      <br />
      Register of Language Proficiency Certificates
       - 
      starting from 15.9.2025
    </div>
  </div>,
]
`;

exports[`Log should render with organization with no translated name 1`] = `
[
  <div
    className="OrganizationsHeader__Container-sc-1dz6xpo-0 hvybnt"
  >
    <div>
      Tietojen käyttäjä
      **
    </div>
    <div
      className="OrganizationsHeader__RightContainer-sc-1dz6xpo-1 hxNnnA"
    >
      Käytetty tietovaranto
    </div>
  </div>,
  <div
    className="Expander__ExpanderContainer-sc-fukmjx-0 cFpswF"
  >
    <button
      aria-pressed={false}
      className="Expander__ExpanderTitle-sc-fukmjx-2 dCVDEV"
      expanded={false}
      onClick={[Function]}
    >
      <div
        aria-hidden="true"
        className="Expander__ExpanderPrefix-sc-fukmjx-1 hGmkdd"
      >
        +
      </div>
      
      <div
        className="Expander__ExpanderSuffix-sc-fukmjx-3 fGrWnX"
      >
        Opintosuoritukset (KOSKI)
      </div>
    </button>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 inSMeu"
  >
    *
    <div
      className="Footnote__TextContainer-sc-x809r1-1 iXJLDo"
    >
      Koskee toistaiseksi vain opintotietoja ja varhaiskasvatuksen tietoja, ei hakemustietoja. Lisätietoa hakemusten henkilötietojen käsittelyn perusteista sekä henkilötietojen luovuttamisesta saat 
      <a
        className="typography__Link-sc-1yq3b4j-5 jfkTYR"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          class="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 gFDmmQ"
        />
        <b
          className="typography__Bold-sc-1yq3b4j-6 kfOwlK"
        >
          tietosuojaselosteesta
        </b>
      </a>
      .
    </div>
  </div>,
  <div
    className="Footnote__Container-sc-x809r1-0 inSMeu"
  >
    **
    <div
      className="Footnote__TextContainer-sc-x809r1-1 iXJLDo"
    >
      Tietojen käyttäjät näytetään eri tietorekistereistä seuraavasti:
      <br />
      Opintosuoritukset (KOSKI)
       - 
      14.11.2018 alkaen
      <br />
      Varhaiskasvatuksen tietovaranto (Varda)
       - 
      28.4.2023 alkaen
      <br />
      Kielitutkintorekisteri
       - 
      15.9.2025 alkaen
    </div>
  </div>,
]
`;
